--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScipt Tests</title>
-    <link rel="stylesheet" href="qunit.css">
+    <link rel="stylesheet" href="../../../superlists/static/tests/qunit.css">
 </head>
 <body>
     <div id="qunit"></div>
@@ -15,9 +15,9 @@
         </form>
     </div>
 
-    <script src="../js/jquery.js"></script>
-    <script src="qunit.js"></script>
-    <script src="../js/list.js"></script>
+    <script src="../../../superlists/static/js/jquery.js"></script>
+    <script src="../../../superlists/static/tests/qunit.js"></script>
+    <script src="../list.js"></script>
     <script>
         /* global $, test, equal */
 
