--- a/accounts/static/tests/tests.html
+++ b/accounts/static/tests/tests.html
@@ -13,18 +13,20 @@
 
     <script src="../../../superlists/static/js/jquery.js"></script>
     <script src="../../../superlists/static/tests/qunit.js"></script>
+    <script src="../../../superlists/static/tests/sinon.js"></script>
     <script src="../accounts.js"></script>
     <script>
         /* global $, test, equal, sinon, Superlists */
 
-        test("Init binds sign in button to navigator.id.request", function () {
+        test('Init binds sign in button to navigator.id.request', function () {
             var requestWasCalled = false;
             var mockRequestFunction = function () {
                 requestWasCalled = true;
             };
             var mockNavigator = {
                 id: {
-                    request: mockRequestFunction
+                    request: mockRequestFunction,
+                    watch: function () {}
                 }
             };
 
@@ -35,6 +37,108 @@
             $('#id_login').trigger('click');
 
             equal(requestWasCalled, true, 'Request called after click');
+        });
+
+        var user, token, urls, mockNavigator, requests, xhr;
+
+        module('navigator.id.watch tests', {
+            setup: function () {
+                user = 'current user';
+                token = 'csrf token';
+                urls = {
+                    login: 'login url',
+                    logout: 'logout url'
+                };
+                mockNavigator = {
+                    id: {
+                        watch: sinon.mock()
+                    }
+                };
+                xhr = sinon.useFakeXMLHttpRequest();
+                requests = [];
+                xhr.onCreate = function (request) {
+                    requests.push(request);
+                };
+            },
+            teardown: function () {
+                mockNavigator.id.watch.reset();
+                xhr.restore();
+            }
+        });
+
+        test('Initialize calls navigator.id.watch', function () {
+            Superlists.Accounts.initialize(mockNavigator, user, token, urls);
+            equal(
+                    mockNavigator.id.watch.calledOnce,
+                    true,
+                    'Check watch function called'
+            );
+        });
+
+        test('Watch sees current user', function () {
+            Superlists.Accounts.initialize(mockNavigator, user, token, urls);
+            var watchCallArgs = mockNavigator.id.watch.firstCall.args[0];
+            equal(watchCallArgs.loggedInUser, user, 'Check user');
+        });
+
+        test('Onlogin does ajax post to login url', function () {
+            Superlists.Accounts.initialize(mockNavigator, user, token, urls);
+            var onloginCallBack = mockNavigator.id.watch.firstCall.args[0]
+                    .onlogin;
+            onloginCallBack();
+            equal(requests.length, 1, 'Check ajax request');
+            equal(requests[0].method, 'POST');
+            equal(requests[0].url, urls.login, 'Check url');
+        });
+
+        test('Onlogin sends assertion with csrf token', function () {
+            Superlists.Accounts.initialize(mockNavigator, user, token, urls);
+            var onloginCallBack = mockNavigator.id.watch.firstCall.args[0]
+                    .onlogin;
+            var assertion = 'browser-id assertion';
+            onloginCallBack(assertion);
+            equal(
+                    requests[0].requestBody,
+                    $.param({
+                        assertion: assertion,
+                        csrfmiddlewaretoken: token
+                    }),
+                    'Check POST data'
+            );
+        });
+
+        test('Onlogout is just a placeholder', function () {
+            Superlists.Accounts.initialize(mockNavigator, user, token, urls);
+            var onlogoutCallBack = mockNavigator.id.watch.firstCall.args[0]
+                    .onlogout;
+            equal(
+                    typeof onlogoutCallBack,
+                    'function',
+                    'onlogout should be a function'
+            );
+        });
+
+        test('Onlogin post failure should do navigator.id.logout', function () {
+            mockNavigator.id.logout = sinon.mock();
+            Superlists.Accounts.initialize(mockNavigator, user, token, urls);
+            var onloginCallBack = mockNavigator.id.watch.firstCall.args[0]
+                    .onlogin;
+            var server = sinon.fakeServer.create();
+            server.respondWith([403, {}, 'Permission denied']);
+
+            onloginCallBack();
+            equal(
+                    mockNavigator.id.logout.called,
+                    false,
+                    'Should not logout yet'
+            );
+
+            server.respond();
+            equal(
+                    mockNavigator.id.logout.called,
+                    true,
+                    'Should call logout'
+            );
         });
     </script>
 </body>
